--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@repo/ui": "workspace:*",
     "next": "^15.1.0",
+    "is-even": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
