--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,7 +22,12 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "is-even": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  }
+  },
+  "peerDependencies": {
+    "next": ">=15"
+  },
+  "optionalDependencies": {}
 }
