Part 2 (2/3) - Building packages in monorepos (compilation pattern)

--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,7 +1,11 @@
 {
     "name": "@repo/example",
     "exports": {
-      ".": "./src/index.ts"
+      ".": "./dist/index.js"
+    },
+    "scripts": {
+        "dev": "tsc --watch --preserveWatchOutput",
+        "build": "tsc"
     },
     "devDependencies": {
         "@repo/typescript-config": "workspace:*"
