Part 2 (3/3) - Building packages in monorepos (multi-entrypoint packages)

--- a/packages/example/package.json
+++ b/packages/example/package.json
@@ -1,7 +1,8 @@
 {
     "name": "@repo/example",
     "exports": {
-      ".": "./dist/index.js"
+      ".": "./dist/index.js",
+      "./youtube": "./dist/youtube.js"
     },
     "scripts": {
         "dev": "tsc --watch --preserveWatchOutput",
